Fix: Shrink PC ULT portrait to 380px to avoid text overlap

--- a/src/style_2d.css
+++ b/src/style_2d.css
@@ -289,8 +289,8 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
-    height: 600px;
+    width: 380px;
+    height: 380px;
     background-repeat: no-repeat;
     background-position: left top;
     opacity: 0;
